Fix progress bar spacing from edges, opacity

--- a/less/ardent.less
+++ b/less/ardent.less
@@ -142,7 +142,9 @@
         position: absolute;
         top: -4px;
         height: 6px;
-        width: calc(~"100% + 5px");
+
+        margin-left: 7px;
+        width: calc(~"100% - 14px");
         background-color: #333;
         animation: 100s progress linear;
         border-bottom: 6px solid #fff;
@@ -152,7 +154,7 @@
             &:after {
                 transform: scale(1.5);
                 background-color: #444;
-                box-shadow: 0 0 0 6px rgba(255,255,255,.9);
+                box-shadow: 0 0 0 6px rgba(255,255,255,.8);
             }
         }
         &:after {
@@ -160,7 +162,7 @@
             position: absolute;
             display: block;
             top: -4px;
-            right: -8px;
+            right: -7px;
             width: 14px;
             height: 14px;
             border-radius: 50%;
@@ -175,11 +177,11 @@
         z-index: 110;
         top: calc(~"-100vh + 100px");
         width: calc(~"100% + 5px");
-        margin-left: 1px;
+        margin-left: 7px;
         height: calc(~"100vh - 100px");
         background-color: #000;
         pointer-events: none;
-        opacity: .01;
+        opacity: .05;
         animation: 100s progress linear;
     }
 }
